@@ -81,22 +81,17 @@ mi_varobj_update * {I_W1 I_W0} "update varobj, 1"
 mi_check_varobj_value I_W0 1 "check varobj, w0, 1"
 mi_check_varobj_value I_W1 1 "check varobj, w1, 1"
 
-gdb_test_multiple "-exec-interrupt --thread 1" "interrupted" {
-    -re "\\^done\r\n$mi_gdb_prompt\\*stopped\[^\r\n\]+\r\n$" {
-	pass "interrupted"
-    }
-}
+mi_gdb_test "-exec-interrupt --thread 1" "\\^done" "interrupted"
+mi_expect_interrupt "got interrupt"
+
 # The interrupt command sends SIGINT to the target, and therefore the
 # thread might not be stopped immediately when we return from the target.
 # So, wait a bit
 sleep 1
 mi_check_thread_states {"stopped" "stopped" "stopped"} "thread state, stop 4"
 
-gdb_test_multiple "-exec-continue --all" "resume all" {
-    -re ".*\\*running,thread-id=\"3\"\r\n\\*running,thread-id=\"2\"\r\n\\*running,thread-id=\"1\"\r\n$mi_gdb_prompt" {
-	pass "resume all"
-    }
-}
+mi_gdb_test "-exec-continue --all" ".*\\*running,thread-id=\"3\"\r\n\\*running,thread-id=\"2\"\r\n\\*running,thread-id=\"1\"" \
+    "resume all"
 
 mi_expect_stop "breakpoint-hit" "break_at_me" "\[^\n\]*" "non-stop.c" "\[0-9\]*" {"" "disp=\"keep\""} "w0,i2 stop"
 mi_expect_stop "breakpoint-hit" "break_at_me" ".*" "non-stop.c" ".*" {"" "disp=\"keep\""} "w1,i2 stop"
